--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -32,147 +32,155 @@
       <nav class="navbar topbar navbar-dark sticky-top bg-light flex-md-nowrap pt-2 pb-2 z-depth-2">
         <a class="navbar-brand col-sm-12 col-md-2 mr-0" href="#">CRC System</a>
         <!-- data-toggle="collapse" href="#sidebar" role="button" aria-expanded="false" aria-controls="sidebar"-->
-        <a id="collapse"><i class="fas fa-bars py-2 p-1"></i></a>
-         <input class="form-control form-control-dark w-100" type="text" placeholder="Search...." aria-label="Search">
-        <ul class="navbar-nav sm-12 px-3">
-          <li class="nav-item text-nowrap">
-            <a class="nav-link" href="/logout">Logout</a>
-          </li>
-          
-        </ul>
+        
+        <div class="col-sm-12 col-md-8">
+            <a id="collapse"><i class="fas fa-bars py-2 p-1"></i></a>
+        </div>
+        <div class="col-md-2">
+            <ul class="navbar-nav sm-12 px-3">
+                <li class="nav-item text-nowrap">
+                  <a class="nav-link" href="/logout">Logout</a>
+                </li>
+                
+              </ul>
+        </div>
+        
       </nav>
   
       <div class="container-fluid">
         <div class="row">
-          <nav class="col-md-2 bg-light sidebar" id="sidebar">
-            <div class="sidebar-sticky ">
-              <ul class="nav flex-column" id="accordion">
-                <li class="nav-item">
-                  <a class="nav-link active" href="/home">
-                    <span><i class="fa fa-home"></i></span>
-                    Home</span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">
-                      <span><i class="fa fa-user"></i></span>
-                      Profile</span>
-                    </a>
-                  </li>
-                 
-                  {% if request.session.utype != "Customer" %}
-                  <p class="pl-2 font-black  sideNavColp" data-toggle="collapse" data-target="#bk" aria-expanded="true" aria-controls="bk" >
-                      <small class="pr-2">Bookings</small>               
-                   </p>
-                   <div id="bk" class="collapse" aria-labelledby="Bookings" data-parent="#accordion">
-                  
-                <li class="nav-item">
-                  <a class="nav-link" href="/booking/order">
-                    <span><i class="fas fa-shopping-cart"></i></span>
-                    Book Vehicles
-                  </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <span><i class="fas fa-file-invoice"></i></span>
-                      Invoices
-                    </a>
-                  </li>
-                  
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <span><i class="fas fa-search-plus"></i></span>
-                    Inspections
-                  </a>
-                </li>
-              </div>
-                <p class="pl-2 font-black  sideNavColp" data-toggle="collapse" data-target="#vm" aria-expanded="true" aria-controls="vm" >
-                    <small class="pr-2">Vehicle Management</small>               
-                 </p>
-                 <div id="vm" class="collapse" aria-labelledby="Vehicle Management" data-parent="#accordion">
-                <li class="nav-item">
-                  <a class="nav-link" href="/vehicle/create">
-                    <span><i class="fas fa-plus"></i></span>
-                    Insert Vehicle
-                  </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="/vehicle">
-                      <span><i class="fas fa-eye"></i></span>
-                      View Vehicles
-                    </a>
-                  </li>
-                </div>
-
-                 <p class="pl-2 font-black sideNavColp" data-toggle="collapse" data-target="#cm" aria-expanded="true" aria-controls="cm" >
-                    <small class="pr-2">Customer Management</small>               
-                 </p>
-                 <div id="cm" class="collapse" aria-labelledby="Customer Management" data-parent="#accordion">
-                 
-                 <li class="nav-item">
-                    <a class="nav-link" href="/customer/create">
-                      <span><i class="fas fa-plus"></i></span>
-                      Insert Customer
-                    </a>
-                  </li>
-  
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">
-                        <span><i class="fas fa-eye"></i></span>
-                        View Customers
+            <nav class="col-md-12 bg-light subtopbar scroll" id="subtopbar">
+                <div class="sidebar-sticky ">
+                  <ul class="nav flex" id="accordion">
+                    <li class="nav-item">
+                      <a class="nav-link" href="/home">
+                        <span><i class="fa fa-home"></i></span>
+                        Home</span>
                       </a>
                     </li>
-                    </div>
-                {% endif %}
-                {% if request.session.utype == "Manager" or  request.session.utype == "Developer" %}
-
-                 <p class="pl-2 font-black sideNavColp" data-toggle="collapse" data-target="#sm" aria-expanded="true" aria-controls="sm" >
-                    <small class="pr-2">Staff Management</small>               
-                 </p>
-                 <div id="sm" class="collapse" aria-labelledby="Staff Management" data-parent="#accordion">
-                 <li class="nav-item">
-                    <a class="nav-link" href="/staff/create">
-                      <span><i class="fas fa-plus"></i></span>
-                      Insert Staff
-                    </a>
-                  </li>
-  
-                  <li class="nav-item">
-                      <a class="nav-link" href="/staff">
-                        <span><i class="fas fa-eye"></i></span>
-                        View Staff
-                      </a>
-                    </li>
-
-                  </div>
-                  <p class="pl-2 font-black sideNavColp" data-toggle="collapse" data-target="#rt" aria-expanded="true" aria-controls="rt" >
-                      <small class="pr-2">Administration</small>               
-                   </p>
-                       <div id="rt" class="collapse" aria-labelledby="Administration" data-parent="#accordion">
-                          <li class="nav-item">
-                              <a class="nav-link active" href="/reports">
-                                <span><i class="fas fa-sign-in-alt"></i></span>
-                              Reports
-                              </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="/staff/login">
-                                  <span><i class="fas fa-sign-in-alt"></i></span>
-                                Login Management
-                                </a>
-                              </li>
-                      </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                          <span><i class="fa fa-user"></i></span>
+                          Profile</span>
+                        </a>
+                      </li>
+                     
+                      {% if request.session.utype != "Customer" %}
+                      <p class="pl-2 font-black  sideNavColp flex" data-toggle="collapse" data-target="#bk" aria-expanded="true" aria-controls="bk" >
+                          <small class="pr-2">Bookings</small>               
+                       </p>
+                       <div id="bk" class="collapse" aria-labelledby="Bookings" data-parent="#accordion">
                       
-                      {% endif %}
-              </ul>
-  
-              
-              </ul>
-            </div>
-          </nav>
-  
+                    <li class="nav-item">
+                      <a class="nav-link" href="/booking/order">
+                        <span><i class="fas fa-shopping-cart"></i></span>
+                        Book Vehicles
+                      </a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                          <span><i class="fas fa-file-invoice"></i></span>
+                          Invoices
+                        </a>
+                      </li>
+                      
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">
+                        <span><i class="fas fa-search-plus"></i></span>
+                        Inspections
+                      </a>
+                    </li>
+                  </div>
+                    <p class="pl-2 font-black  sideNavColp flex" data-toggle="collapse" data-target="#vm" aria-expanded="true" aria-controls="vm" >
+                        <small class="pr-2">Vehicle Management</small>               
+                     </p>
+                     <div id="vm" class="collapse" aria-labelledby="Vehicle Management" data-parent="#accordion">
+                    <li class="nav-item">
+                      <a class="nav-link" href="/vehicle/create">
+                        <span><i class="fas fa-plus"></i></span>
+                        Insert Vehicle
+                      </a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/vehicle">
+                          <span><i class="fas fa-eye"></i></span>
+                          View Vehicles
+                        </a>
+                      </li>
+                    </div>
+    
+                     <p class="pl-2 font-black sideNavColp flex" data-toggle="collapse" data-target="#cm" aria-expanded="true" aria-controls="cm" >
+                        <small class="pr-2">Customer Management</small>               
+                     </p>
+                     <div id="cm" class="collapse" aria-labelledby="Customer Management" data-parent="#accordion">
+                     
+                     <li class="nav-item">
+                        <a class="nav-link" href="/customer/create">
+                          <span><i class="fas fa-plus"></i></span>
+                          Insert Customer
+                        </a>
+                      </li>
+      
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span><i class="fas fa-eye"></i></span>
+                            View Customers
+                          </a>
+                        </li>
+                        </div>
+                    {% endif %}
+                    {% if request.session.utype == "Manager" or  request.session.utype == "Developer" %}
+    
+                     <p class="pl-2 font-black sideNavColp flex" data-toggle="collapse" data-target="#sm" aria-expanded="true" aria-controls="sm" >
+                        <small class="pr-2">Staff Management</small>               
+                     </p>
+                     <div id="sm" class="collapse" aria-labelledby="Staff Management" data-parent="#accordion">
+                     <li class="nav-item">
+                        <a class="nav-link" href="/staff/create">
+                          <span><i class="fas fa-plus"></i></span>
+                          Insert Staff
+                        </a>
+                      </li>
+      
+                      <li class="nav-item">
+                          <a class="nav-link" href="/staff">
+                            <span><i class="fas fa-eye"></i></span>
+                            View Staff
+                          </a>
+                        </li>
+    
+                      </div>
+
+                      <p class="pl-2 font-black sideNavColp flex" data-toggle="collapse" data-target="#rt" aria-expanded="true" aria-controls="rt" >
+                          <small class="pr-2">Administration</small>               
+                       </p>
+                           <div id="rt" class="collapse" aria-labelledby="Administration" data-parent="#accordion">
+                              <li class="nav-item">
+                                  <a class="nav-link" href="/reports">
+                                    <span><i class="fas fa-sign-in-alt"></i></span>
+                                  Reports
+                                  </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/staff/login">
+                                      <span><i class="fas fa-sign-in-alt"></i></span>
+                                    Login Management
+                                    </a>
+                                  </li>
+                          </div>
+                          
+                          {% endif %}
+                  </ul>
+      
+                  
+                  </ul>
+                </div>
+              </nav>
+      
+        </div>
+        <div class="row">
           <main role="main" id="mainContent" class="col pt-3 px-4">
               <div class="row pb-2 mb-3 border-bottom">
                   <div class="col-md-12">
@@ -185,7 +193,7 @@
                     </nav>
                     </div>
               </div>
-            <div class="row align-items-center pb-2 mb-3 border-bottom">
+            <div class="row align-items-center pb-2 mb-3 border-bottom" id="content">
               
                 <div class="col-md-12">
                           {% block content %}
@@ -226,5 +234,8 @@
   <script src="{% static "js/jspdf.debug.js" %}" ></script>
   <script src="{% static "js/main.js" %}" ></script>
   {% block scripts %}
+  <script>
+      
+  </script>
   {% endblock %}
 </html>
