--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -39,7 +39,7 @@
         <div class="col-md-2">
             <ul class="navbar-nav sm-12 px-3">
                 <li class="nav-item text-nowrap">
-                  <a class="nav-link" href="/logout">Logout</a>
+                  <a class="nav-link" href="/logoff">Logout</a>
                 </li>
                 
               </ul>
