Changed the public UI and the URLS
+ Login/logoff => /system/login or /system/logoff
+ Management application => /managements/...
+Public pages => /

Changed the Login and Public UI
Added a background image for the index page

--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -35,7 +35,7 @@
          <input class="form-control form-control-dark w-100" type="text" placeholder="Search...." aria-label="Search">
         <ul class="navbar-nav sm-12 px-3">
           <li class="nav-item text-nowrap">
-            <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" href="/system/logoff">Logout</a>
           </li>
           
         </ul>
@@ -64,7 +64,7 @@
                             <hr>
                             <div class="col-md-12 row">
                                 <div class="col-md-4 boxes">
-                                        <a href="/booking/order">
+                                        <a href="/management/booking/order">
                                             <span class="text-center"><i class="fas fa-shopping-cart"></i></span>
                                             Book Vehicles
                                           </a>
@@ -88,13 +88,13 @@
                                 <hr>
                                 <div class="col-md-12 row">
                                     <div class="col-md-4 boxes">
-                                            <a href="/vehicle/create">
+                                            <a href="/management/vehicle/create">
                                                 <span><i class="fas fa-plus"></i></span>
                     Insert Vehicle
                                               </a>
                                     </div>
                                     <div class="col-md-4 boxes">
-                                            <a href="/vehicle">
+                                            <a href="/management/vehicle">
                                                 <span><i class="fas fa-eye"></i></span>
                                                 View Vehicles
                                               </a>
@@ -108,13 +108,13 @@
                                     <hr>
                                     <div class="col-md-12 row">
                                         <div class="col-md-4 boxes">
-                                                <a href="/customer/create">
+                                                <a href="/management/customer/create">
                                                     <span><i class="fas fa-plus"></i></span>
                         Register New Customer
                                                   </a>
                                         </div>
                                         <div class="col-md-4 boxes">
-                                                <a href="/customer">
+                                                <a href="/management/customer">
                                                     <span><i class="fas fa-eye"></i></span>
                                                     View Customers
                                                   </a>
@@ -128,13 +128,13 @@
                                         <hr>
                                         <div class="col-md-12 row">
                                             <div class="col-md-4 boxes">
-                                                    <a href="/staff/create">
+                                                    <a href="/management/staff/create">
                                                         <span><i class="fas fa-plus"></i></span>
                             Register New Staff Member
                                                       </a>
                                             </div>
                                             <div class="col-md-4 boxes">
-                                                    <a href="/staff">
+                                                    <a href="/management/staff">
                                                         <span><i class="fas fa-eye"></i></span>
                                                         View Staff
                                                       </a>
@@ -148,13 +148,13 @@
                                             <hr>
                                             <div class="col-md-12 row">
                                                 <div class="col-md-4 boxes">
-                                                        <a href="/staff/login">
+                                                        <a href="/management/staff/login">
                                                             <span><i class="fas fa-plus"></i></span>
                                 Login Management
                                                           </a>
                                                 </div>
                                                 <div class="col-md-4 boxes">
-                                                        <a href="/reports">
+                                                        <a href="/management/reports">
                                                             <span><i class="fas fa-eye"></i></span>
                                                             Reports
                                                           </a>
