--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -39,7 +39,7 @@
         <div class="col-md-2">
             <ul class="navbar-nav sm-12 px-3">
                 <li class="nav-item text-nowrap">
-                  <a class="nav-link" href="/logoff">Logout</a>
+                  <a class="nav-link" href="/system/logoff">Logout</a>
                 </li>
                 
               </ul>
@@ -53,7 +53,7 @@
                 <div class="sidebar-sticky ">
                   <ul class="nav flex" id="accordion">
                     <li class="nav-item">
-                      <a class="nav-link" href="/home">
+                      <a class="nav-link" href="/management/home">
                         <span><i class="fa fa-home"></i></span>
                         Home</span>
                       </a>
@@ -72,7 +72,7 @@
                        <div id="bk" class="collapse" aria-labelledby="Bookings" data-parent="#accordion">
                       
                     <li class="nav-item">
-                      <a class="nav-link" href="/booking/order">
+                      <a class="nav-link" href="/management/booking/order">
                         <span><i class="fas fa-shopping-cart"></i></span>
                         Book Vehicles
                       </a>
@@ -97,14 +97,14 @@
                      </p>
                      <div id="vm" class="collapse" aria-labelledby="Vehicle Management" data-parent="#accordion">
                     <li class="nav-item">
-                      <a class="nav-link" href="/vehicle/create">
+                      <a class="nav-link" href="/management/vehicle/create">
                         <span><i class="fas fa-plus"></i></span>
                         Insert Vehicle
                       </a>
                     </li>
     
                     <li class="nav-item">
-                        <a class="nav-link" href="/vehicle">
+                        <a class="nav-link" href="/management/vehicle">
                           <span><i class="fas fa-eye"></i></span>
                           View Vehicles
                         </a>
@@ -117,7 +117,7 @@
                      <div id="cm" class="collapse" aria-labelledby="Customer Management" data-parent="#accordion">
                      
                      <li class="nav-item">
-                        <a class="nav-link" href="/customer/create">
+                        <a class="nav-link" href="/management/customer/create">
                           <span><i class="fas fa-plus"></i></span>
                           Insert Customer
                         </a>
@@ -138,14 +138,14 @@
                      </p>
                      <div id="sm" class="collapse" aria-labelledby="Staff Management" data-parent="#accordion">
                      <li class="nav-item">
-                        <a class="nav-link" href="/staff/create">
+                        <a class="nav-link" href="/management/staff/create">
                           <span><i class="fas fa-plus"></i></span>
                           Insert Staff
                         </a>
                       </li>
       
                       <li class="nav-item">
-                          <a class="nav-link" href="/staff">
+                          <a class="nav-link" href="/management/staff">
                             <span><i class="fas fa-eye"></i></span>
                             View Staff
                           </a>
@@ -158,13 +158,13 @@
                        </p>
                            <div id="rt" class="collapse" aria-labelledby="Administration" data-parent="#accordion">
                               <li class="nav-item">
-                                  <a class="nav-link" href="/reports">
+                                  <a class="nav-link" href="/management/reports">
                                     <span><i class="fas fa-sign-in-alt"></i></span>
                                   Reports
                                   </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/staff/login">
+                                    <a class="nav-link" href="/management/staff/login">
                                       <span><i class="fas fa-sign-in-alt"></i></span>
                                     Login Management
                                     </a>
@@ -186,7 +186,7 @@
                   <div class="col-md-12">
                   <nav aria-label="breadcrumb">
                       <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/home">Home</a></li>
+                        <li class="breadcrumb-item"><a href="/management/home">Home</a></li>
                         {% block breadcrumb %}
                         {% endblock %}
                       </ol>
