--- a/carrentalsystem/crcapp/templates/index.html
+++ b/carrentalsystem/crcapp/templates/index.html
@@ -27,167 +27,47 @@
 
   </head>
 
-  <body id="page-top">
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">CRC Web</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static "images/icon.jpg" %}" alt="">
-        </span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#vehicles">Vehicles</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#stores">Stores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#login">Login</a>
-          </li>
-         
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container-fluid p-0">
-
-      <section class="content-section p-3 p-lg-5" id="home">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <br>
-            <h3>Welcome to Car Rental Service</h3>
-            <br>
-            <hr>
-            <br>
-          </div>
-        </div>
-        <div class="row mt-5 mb-5">
-
-          
-          <div class="col-md-6">
-            
-              <div class="form-group">
-                <select class="form-control" id="pickupStore">
-                  <option value=""> SELECT PICKUP STORE  </option>
-                  {% for store in stores %}
-                    <option value="{{ store.storeID }}">{{ store.storeName }}</option>
-                  {% endfor %}
-                </select>
-          
-            </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <select class="form-control" id="returnStore">
-                  <option value=""> SELECT RETURN STORE  </option>
-                  {% for store in stores %}
-                    <option value="{{ store.storeID }}">{{ store.storeName }}</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-
-          </div>
-
-
-          <div class="row mt-5 mb-5">
-
-          
-              <div class="col-md-6">
-                
-                  <div class="form-group">
-                      <input data-date-format="yyyy-mm-dd" name="pickupdate" class="form-control"
-                      id="pickupdate" placeholder="Pickup Date: yyyy-mm-dd" required >
-              
-                </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                      <input data-date-format="yyyy-mm-dd" name="returndate" class="form-control"
-                      id="returndate" placeholder="Return Date: yyyy-mm-dd" required >
-                  </div>
-                </div>
-    
-                
-              </div>
-              <div class="row justify-content-center mt-5">
-                  <div class="col-md-3">
-                      <div class="form-group pl-5">
-                          <div class="btn btn-flat btn-primary pl-5 pr-5" id="selectBtn">SELECT</div>
-                        </div>
-                  </div>
-              </div>
-      </section>
-
-      <hr class="m-0">
-
-      <section class="content-section p-3 p-lg-5 d-flex flex-column" id="vehicles">
-        <h2 class="mb-5">Vehicles</h2>
-        <div class="row">
-          <div class="col-md-">
-
-          </div>
-
-        </div>
-
-      </section>
-
-      <hr class="m-0">
-
-      <section class="content-section p-3 p-lg-5 d-flex flex-column" id="stores">
-          <h2 class="mb-5">Stores</h2>
-        <div class="row">
-          <h4>Google Map store locator, coming soon...</h4>
-        </div>
-      </section>
-
-      <section class="content-section p-3 p-lg-5 d-flex flex-column" id="login">
-          <h2 class="mb-5">Car Rental System</h2>
-        <div class="container pt-5">
-          <div class="row justify-content-center">
-            
-            <div class="col-md-4 col-sm-12 pt-2 text-center">
-            
-                {% if msg != "" %}
-                  {% if mtype == "d" %}
-                    <div class="alert alert-danger">
-                  {% elif mtype == "i" %}
-                    <div class="alert alert-info">
-                  {% endif %}
-                        {{ msg }}
-                      </div>
-                {% endif %}
-                <h4 class="mb-3 font-weight-normal font-blue">Please sign in</h4>
-            
-    
-                <form action="/login/employee" method="post">
-                    {% csrf_token %}
-                    <div class="form-group font-black">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" required="true" placeholder="Enter username">
-                      </div>
-                      <div class="form-group font-black">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required="true" placeholder="Your Password">
-                      </div>
-                    <button type="submit">Login</button>
-                  </form>
-            </div>
-    
-          </div>
-      </div>
-    </section>
-
+  <body>
       
+      <nav class="navbar navbar-expand-md navbar-dark bg-light fixed-top">
+          <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/vehicles">Vehicles</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/stores">Stores</a>
+                  </li>
+              </ul>
+          </div>
+          <div class="mx-auto order-0">
+              <a class="navbar-brand mx-auto" href="#">Car Rental Service</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                  <span class="fas fa-bars font-blue"></span>
+               
+              </button>
+          </div>
+          <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="/login">Login</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/register">New user? Register</a>
+                  </li>
+              </ul>
+          </div>
+      </nav>
+
+        <div class="container-fluid p-0">
+            {% block content %}
+            {% endblock %}
+   
+
+       </div> 
   <script src="{% static "js/jquery-3.3.1.min.js" %}" ></script>
   <script src="{% static "js/popper.min.js" %}" ></script>
   <script src="{% static "js/bootstrap.min.js" %}" ></script>
