--- a/carrentalsystem/crcapp/templates/public/index.html
+++ b/carrentalsystem/crcapp/templates/public/index.html
@@ -70,10 +70,18 @@
 
   <section class="content-section p-3 p-lg-5 d-flex flex-column" id="vehicles">
     <h4 class="mb-5">Newly added vehicles to our fleet</h4>
-    <div class="row">
-      <div class="col-md-">
+    <div class="row flex verticalScrollContainer">
 
+        {% for item in vehicles  %}
+     <div class="col-md-3 items p-3 text-center">
+          <h5>Make: {{ item.makeName | title }}</h5>
+          <p>Model: {{ item.model | title  }}</p>
+          <p>Series: {{ item.series | title }}</p>
+          <p>Year: {{ item.year }}</p>
+          <img src="static/images/carIcon.png" class="img-responsive img-center" width="50%">
+        
       </div>
+      {% endfor %}
 
     </div>
 
