--- a/carrentalsystem/crcapp/templates/public/login.html
+++ b/carrentalsystem/crcapp/templates/public/login.html
@@ -1,8 +1,8 @@
 {% extends '../index.html' %}
 {% block content %}
 <section class="content-section p-3 p-lg-5 d-flex flex-column" id="login">
-        <h2 class="mb-5">Car Rental System</h2>
-      <div class="container pt-5">
+
+      <div class="container mt-3 pt-5">
         <div class="row justify-content-center">
           
           <div class="col-md-4 col-sm-12 pt-2 text-center">
@@ -21,15 +21,15 @@
   
               <form action="/system/login/employee" method="post">
                   {% csrf_token %}
-                  <div class="form-group font-black">
+                  <div class="form-group font-black pt-3 mt-3">
                       <label for="username">Username</label>
                       <input type="text" class="form-control" id="username" name="username" required="true" placeholder="Enter username">
                     </div>
-                    <div class="form-group font-black">
+                    <div class="form-group font-black pt-3 mt-3">
                       <label for="password">Password</label>
                       <input type="password" class="form-control" id="password" name="password" required="true" placeholder="Your Password">
                     </div>
-                  <button type="submit">Login</button>
+                  <button type="submit" class="mt-6 btn btn-primary">Login</button>
                 </form>
           </div>
   
