Added public vehicles page
+ Changed few urls
+ Fixed the login error messages

--- a/carrentalsystem/crcapp/static/css/publicstyles.css
+++ b/carrentalsystem/crcapp/static/css/publicstyles.css
@@ -19,11 +19,13 @@
     box-shadow: 0px 0px 10px 0px rgba(72,133,237,0.6);
 }
 
-.items{
+
+.items > .item{
   border:1px solid #4885ed !important;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(72,133,237,0.2);
     -moz-box-shadow: 0px 0px 10px 0px rgba(72,133,237,0.2);
     box-shadow: 0px 0px 10px 0px rgba(72,133,237,0.2);
+    overflow: hidden;
 }
 
 .img-center{
