--- a/carrentalsystem/crcapp/templates/customer/create.html
+++ b/carrentalsystem/crcapp/templates/customer/create.html
@@ -28,7 +28,7 @@
 	</div>
 </div>
 {% endif %}
-<form action="/create/customer" method="post">
+<form action="/management/create/customer" method="post">
 	{% csrf_token %}
 	<div class="container">
 		<div class="row">
