--- a/carrentalsystem/crcapp/templates/staff/create.html
+++ b/carrentalsystem/crcapp/templates/staff/create.html
@@ -34,7 +34,7 @@
 </div>    
 {% endif %}
 
-<form action="/staff/create" method="POST">
+<form action="/management/staff/create" method="POST">
         {% csrf_token %}
         <div class="container">
                 <div class="row">
