--- a/carrentalsystem/crcapp/templates/staff/staffmanagementview.html
+++ b/carrentalsystem/crcapp/templates/staff/staffmanagementview.html
@@ -29,7 +29,7 @@
                     {% for staff in employees %}
                     
                     <tr>
-                            <td class="pdttable"><a href="/staff/id/{{ staff.employeeID }}">{{ staff.employeeID }}</a></td>
+                            <td class="pdttable"><a href="/management/staff/id/{{ staff.employeeID }}">{{ staff.employeeID }}</a></td>
                             <td class="pdttable">{{ staff.firstName }} {{ staff.lastName}}</td>
                             <td class="pdttable">{{ staff.email }}</td>
                             <td class="pdttable">
