--- a/carrentalsystem/crcapp/templates/vehicle/create.html
+++ b/carrentalsystem/crcapp/templates/vehicle/create.html
@@ -29,7 +29,7 @@
 	</div>
 </div>
 {% endif %}
-<form action="/vehicle/create" method="POST" id="vform">
+<form action="/management/vehicle/create" method="POST" id="vform">
 	{% csrf_token %}
 	<div class="container">
 		<div class="row">
