--- a/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
+++ b/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
@@ -30,7 +30,7 @@
                     {% for vehicle in vehicles %}
                     
                     <tr>
-                            <td class="pdttable"><a href="/vehicle/id/{{ vehicle.vehicleID }}">{{ vehicle.vehicleID }}</a></td>
+                            <td class="pdttable"><a href="/management/vehicle/id/{{ vehicle.vehicleID }}">{{ vehicle.vehicleID }}</a></td>
                             <td class="pdttable">{{ vehicle.makeName }}</td>
                             <td class="pdttable">{{ vehicle.model }}</td>
                             
