--- a/carrentalsystem/crcapp/templates/public/login.html
+++ b/carrentalsystem/crcapp/templates/public/login.html
@@ -1,8 +1,17 @@
 {% extends '../index.html' %}
+{% block title %}Login{% endblock %}
 {% block content %}
 <section class="content-section p-3 p-lg-5 d-flex flex-column" id="login">
-
+        <div class="row pt-4">
+                <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                          <li class="breadcrumb-item"><a href="/">Home</a></li>
+                          <li class="breadcrumb-item">Login</li>
+                        </ol>
+                      </nav>
+          </div>
       <div class="container mt-3 pt-5">
+         
         <div class="row justify-content-center">
           
           <div class="col-md-4 col-sm-12 pt-2 text-center">
