Seperating views into seperate files, hooking up create/modify customer again. Working on validation

--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -108,7 +108,7 @@
                                     <hr>
                                     <div class="col-md-12 row">
                                         <div class="col-md-4 boxes">
-                                                <a href="/management/customer/create">
+                                                <a href="{% url 'customerCreate' %}">
                                                     <span><i class="fas fa-plus"></i></span>
                         Register New Customer
                                                   </a>
