--- a/carrentalsystem/crcapp/templates/customer/modify.html
+++ b/carrentalsystem/crcapp/templates/customer/modify.html
@@ -1,8 +1,11 @@
 {% extends '../base.html' %}
 {% block title %}{{currentOperation}} Customer{% endblock %}
 {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'viewCustomers' %}">View Customers</a></li>
-<li class="breadcrumb-item active" aria-current="page">{{ customer.firstName }} {{ customer.lastName }}</li>
+{% if currentOperation == "Modify" %}
+	<li class="breadcrumb-item active" aria-current="page">{{ customer.firstName }} {{ customer.lastName }}</li>
+{% else %}
+	<li class="breadcrumb-item active" aria-current="page">Register New Customer</li>
+{% endif %}
 {% endblock %}
 {% block content %}
 <!-- Error message box will be shown only if the msg variable has some value -->
@@ -40,7 +43,7 @@
 		{% if currentOperation == "Modify" %}
 		    <form action="/customer/id/{{ customer.customerID }}" method="POST">
 		{% else %}
-   			<form action="/create/customer" method="post">
+   			<form action="{% url 'customerCreate' %}" method="POST">
 		{% endif %}
 		{% csrf_token %}
 		<input type="hidden" name="customerID" value="{{ customer.customerID }}"/>
@@ -51,12 +54,23 @@
 			<label for="firstName" class="col-sm-2 col-form-label">First Name</label>
 			<div class="col-sm-4">
 				<input type="text" name="firstName" class="form-control" id="firstName"
-				placeholder="First Name" value="{{ customer.firstName }}" required autofocus>
+				placeholder="First Name" value="{{ customer.firstName }}" required>
 			</div>
 			<label for="lastName" class="col-sm-2 col-form-label">Last Name</label>
 			<div class="col-sm-4">
 				<input type="text" name="lastName" class="form-control" id="lastName"
-				placeholder="Last Name" value="{{ customer.lastName }}" required autofocus>
+				placeholder="Last Name" value="{{ customer.lastName }}" required>
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="gender" class="col-sm-2 col-form-label">Gender</label>
+			<div class="col-sm-10">
+				<select class="custom-select" name="gender" required>
+					<option value="{{ customer.gender }}">Select a Gender</option>
+					<option value="M">Male</option>
+					<option value="F">Female</option>
+					<option value="O">Other</option>
+				</select>
 			</div>
 		</div>
 		<div class="row col-md-12 mb-2">
@@ -66,23 +80,23 @@
 			<label for="streetAddress" class="col-sm-2 col-form-label">Street Address</label>
 			<div class="col-sm-4 mb-3">
 				<input type="text" name="streetAddress" class="form-control" id="streetAddress"
-				placeholder="Street" value="{{ customer.streetAddress }}" required autofocus>
+				placeholder="Street" value="{{ customer.streetAddress }}">
 			</div>
 			<label for="city" class="col-sm-2 col-form-label">City</label>
 			<div class="col-sm-4 mb-2">
-				<input type="text" name="city" class="form-control" id="city"
-				placeholder="City" value="{{ customer.city }}" required autofocus>
+				<input type="text" name="cityAddress" class="form-control" id="city"
+				placeholder="City" value="{{ customer.city }}">
 			</div>
 		</div>
 		<div class="form-group row">
-			<label for="postalCode" class="col-sm-2 col-form-label">Postal Code</label>
+			<label for="postCodeAddress" class="col-sm-2 col-form-label">Postal Code</label>
 			<div class="col-sm-4 mb-3">
-				<input type="text" name="postalCode" class="form-control" id="postalCode"
-				placeholder="Postal Code" value="{{ customer.postalCode }}" required autofocus>
+				<input type="text" name="postCodeAddress" class="form-control" id="postalCode"
+				placeholder="Postal Code" value="{{ customer.postalCode }}">
 			</div>
-			<label for="state" class="col-sm-2 col-form-label">State</label>
+			<label for="stateAddress" class="col-sm-2 col-form-label">State</label>
 				<div class="col-sm-4 mb-3">
-					<select class="custom-select" name="state" required>
+					<select class="custom-select" name="stateAddress">
 						<option value="{{ customer.streetAddress }}">Select a State</option>
 						<option value="NSW">New South Wales</option>
 						<option value="NT">Northern Territory</option>
@@ -98,38 +112,41 @@
 			<h4>Other Details</h4>
 		</div>
 		<div class="form-group row">
-			<label for="DriverLicenseNumber" class="col-sm-3 col-form-label">Drivers License Number</label>
+			<label for="driverLicenseNumber" class="col-sm-3 col-form-label">Drivers License Number</label>
 			<div class="col-sm-7 mb-2">
-				<input type="text" name="DriverLicenseNumber" class="form-control" id="DriverLicenseNumber"
-				placeholder="Drivers License Number" value="{{ customer.DriverLicenseNumber }}" required autofocus>
+				<input type="text" name="driverLicenseNumber" class="form-control" id="DriverLicenseNumber"
+				placeholder="Drivers License Number" value="{{ customer.DriverLicenseNumber }}">
 			</div>
 		</div>
 		<div class="form-group row">
 			<label for="DOB" class="col-sm-3 col-form-label">Date Of Birth</label>
 			<div class="col-sm-7 mb-2">
 				<input data-date-format="dd-mm-yyyy" class="form-control"
-				id="datepicker" placeholder="dd-mm-yyyy" value="{{ customer.DOB|date:"d-m-Y" }}" autofocus>
+				id="datepicker" placeholder="dd-mm-yyyy" value="{{ customer.DOB|date:'d-m-Y' }}" required>
 			</div>
 		</div>
 		<div class="form-group row">
 			<label for="phoneNumber" class="col-sm-3 col-form-label">Phone Number</label>
 			<div class="col-sm-7 mb-2">
 				<input type="text" name="phoneNumber" class="form-control" id="phoneNumber"
-				placeholder="Phone Number" value="{{ customer.phoneNumber }}" required autofocus>
+				placeholder="Phone Number" value="{{ customer.phoneNumber }}">
 			</div>
 		</div>
 		<div class="form-group row">
 			<label for="email" class="col-sm-3 col-form-label">Email Address</label>
-			<div class="col-sm-7 mb-2">
+			<div class="input-group col-sm-7 mb-2">
+				<div class="input-group-prepend">
+					<span class="input-group-text" id="basic-addon1">@</span>
+				</div>
 				<input type="email" name="email" class="form-control" id="email"
-				placeholder="you@example.com" value="{{ customer.email }}" required autofocus>
+				placeholder="you@example.com" value="{{ customer.email }}">
 			</div>
 		</div>
 		<div class="form-group row">
 				<label for="occupation" class="col-sm-3 col-form-label">Occupation</label>
 			<div class="col-sm-7 mb-3">
 				<input type="text" name="occupation" class="form-control" id="occupation"
-				placeholder="Occupation" value="{{ customer.occupation }}" required autofocus>
+				placeholder="Occupation" value="{{ customer.occupation }}">
 			</div>
 		</div>
 		<div class="form-group row">
@@ -152,7 +169,7 @@
 {% endblock %}
 {% block scripts %}
 <script type="text/javascript">
-	$('#datepicker').datepicker({
+	$("#datepicker").datepicker({
 	    weekStart: 1,
 	    daysOfWeekHighlighted: "6,0",
 	    autoclose: true,
