--- a/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
+++ b/carrentalsystem/crcapp/templates/vehicle/vehiclemanagementview.html
@@ -37,7 +37,8 @@
                             <td class="pdttable">{{ vehicle.series }}</td> 
                             <td class="pdttable">{{ vehicle.year }}</td> 
                             <td class="pdttable">
-                              {{ vehicle.storeID.storeName }}
+                              <!-- {{ vehicle.storeID.storeName }} -->
+                              Brisbane
 
                       </td>                         
                         </tr>
