--- a/carrentalsystem/crcapp/templates/public/login.html
+++ b/carrentalsystem/crcapp/templates/public/login.html
@@ -28,7 +28,7 @@
               <h4 class="mb-3 font-weight-normal font-blue">Please sign in</h4>
           
   
-              <form action="/system/login/employee" method="post">
+              <form action="/system/login" method="post">
                   {% csrf_token %}
                   <div class="form-group font-black pt-3 mt-3">
                       <label for="username">Username</label>
