--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -159,6 +159,12 @@
                                                             Reports
                                                           </a>
                                                 </div>
+                                                <div class="col-md-4 boxes">
+                                                    <a href="{% url 'storesStaff' %}">
+                                                        <span><i class="fas fa-eye"></i></span>
+                                                        Store Locations
+                                                    </a>
+                                                </div>
                                                 
                                             </div>
                                         </div>
